url: https://www.saucedemo.com/
properties:
  testCaseId: "TC-101"
---
# Scenario 1: Checkout
- runFlow: "common/login_valid_creds.yaml"
- runFlow: "common/empty_cart.yaml"
- tapOn: Add to cart
- tapOn:
    id: shopping_cart_container
- scrollUntilVisible:
    element: Checkout
- tapOn: Checkout
- tapOn: First Name
- inputText: ${faker.name().firstName()}
- tapOn: Last Name
- inputText: ${faker.name().lastName()}
- tapOn: Zip/Postal Code
- inputText: ${faker.number().digits(5)}
- tapOn: Continue
- scrollUntilVisible:
    element: Finish
- tapOn: Finish
- assertVisible: Thank you for your order!
- assertVisible:
    id: checkout_complete_container

# Scenario 2: Add to Cart - negative scenario
- runFlow: "common/login_valid_creds.yaml"
- tapOn: Add to cart
- tapOn:
    id: shopping_cart_container
- scrollUntilVisible:
    element: Checkout
- tapOn: Checkout
- tapOn: First Name
- inputText: John
- tapOn: Last Name
- inputText: Doe
- tapOn: Continue
- assertVisible: "Error: Postal Code is required"
